--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/various-styles/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/various-styles/button.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-2col.xhtml">
@@ -6,83 +6,83 @@
 	<ui:define name="col1">
 		<showcase:example>
 			<p>
-				<aui:button styleClass="btn-primary">
+				<alloy:button styleClass="btn-primary">
 					<h:outputText value="#{i18n['primary']}" />
-				</aui:button>
-				<aui:button styleClass="btn-info">
+				</alloy:button>
+				<alloy:button styleClass="btn-info">
 					<h:outputText value="#{i18n['info']}" />
-				</aui:button>
-				<aui:button styleClass="btn-success">
+				</alloy:button>
+				<alloy:button styleClass="btn-success">
 					<h:outputText value="#{i18n['success']} " />
-					<aui:icon name="ok" />
-				</aui:button>
-				<aui:button styleClass="btn-warning">
+					<alloy:icon name="ok" />
+				</alloy:button>
+				<alloy:button styleClass="btn-warning">
 					<h:outputText value="#{i18n['warning']}" />
-				</aui:button>
-				<aui:button styleClass="btn-danger">
-					<aui:icon name="remove" />
+				</alloy:button>
+				<alloy:button styleClass="btn-danger">
+					<alloy:icon name="remove" />
 					<h:outputText value=" #{i18n['danger']}" />
-				</aui:button>
-				<aui:button styleClass="btn-inverse">
+				</alloy:button>
+				<alloy:button styleClass="btn-inverse">
 					<h:outputText value="#{i18n['inverse']}" />
-				</aui:button>
-				<aui:button styleClass="btn-link">
+				</alloy:button>
+				<alloy:button styleClass="btn-link">
 					<h:outputText value="#{i18n['link']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button styleClass="btn-primary btn-large">
+				<alloy:button styleClass="btn-primary btn-large">
 					<h:outputText value="#{i18n['large']}" />
-				</aui:button>
-				<aui:button styleClass="btn-large">
+				</alloy:button>
+				<alloy:button styleClass="btn-large">
 					<h:outputText value="#{i18n['large']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button styleClass="btn-primary">
+				<alloy:button styleClass="btn-primary">
 					<h:outputText value="#{i18n['default']}" />
-				</aui:button>
-				<aui:button>
+				</alloy:button>
+				<alloy:button>
 					<h:outputText value="#{i18n['default']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button styleClass="btn-primary btn-small">
+				<alloy:button styleClass="btn-primary btn-small">
 					<h:outputText value="#{i18n['small']}" />
-				</aui:button>
-				<aui:button styleClass="btn-small">
+				</alloy:button>
+				<alloy:button styleClass="btn-small">
 					<h:outputText value="#{i18n['small']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button styleClass="btn-primary btn-mini">
+				<alloy:button styleClass="btn-primary btn-mini">
 					<h:outputText value="#{i18n['mini']}" />
-				</aui:button>
-				<aui:button styleClass="btn-mini">
+				</alloy:button>
+				<alloy:button styleClass="btn-mini">
 					<h:outputText value="#{i18n['mini']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button disabled="true" styleClass="btn-primary">
+				<alloy:button disabled="true" styleClass="btn-primary">
 					<h:outputText value="#{i18n['disabled']}" />
-				</aui:button>
-				<aui:button disabled="true">
+				</alloy:button>
+				<alloy:button disabled="true">
 					<h:outputText value="#{i18n['disabled']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 
 			<p>
-				<aui:button styleClass="btn-primary btn-block">
+				<alloy:button styleClass="btn-primary btn-block">
 					<h:outputText value="#{i18n['block']}" />
-				</aui:button>
-				<aui:button styleClass="btn-block">
+				</alloy:button>
+				<alloy:button styleClass="btn-block">
 					<h:outputText value="#{i18n['block']}" />
-				</aui:button>
+				</alloy:button>
 			</p>
 		</showcase:example>
 	</ui:define>
