--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/various-styles/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/various-styles/commandButton.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-2col.xhtml">
@@ -7,83 +7,83 @@
 		<h:form>
 			<showcase:example>
 				<p>
-					<aui:commandButton styleClass="btn-primary">
+					<alloy:commandButton styleClass="btn-primary">
 						<h:outputText value="#{i18n['primary']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-info">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-info">
 						<h:outputText value="#{i18n['info']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-success">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-success">
 						<h:outputText value="#{i18n['success']} " />
-						<aui:icon name="ok" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-warning">
+						<alloy:icon name="ok" />
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-warning">
 						<h:outputText value="#{i18n['warning']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-danger">
-						<aui:icon name="remove" />
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-danger">
+						<alloy:icon name="remove" />
 						<h:outputText value=" #{i18n['danger']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-inverse">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-inverse">
 						<h:outputText value="#{i18n['inverse']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-link">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-link">
 						<h:outputText value="#{i18n['link']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton styleClass="btn-primary btn-large">
+					<alloy:commandButton styleClass="btn-primary btn-large">
 						<h:outputText value="#{i18n['large']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-large">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-large">
 						<h:outputText value="#{i18n['large']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton styleClass="btn-primary">
+					<alloy:commandButton styleClass="btn-primary">
 						<h:outputText value="#{i18n['default']}" />
-					</aui:commandButton>
-					<aui:commandButton>
+					</alloy:commandButton>
+					<alloy:commandButton>
 						<h:outputText value="#{i18n['default']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton styleClass="btn-primary btn-small">
+					<alloy:commandButton styleClass="btn-primary btn-small">
 						<h:outputText value="#{i18n['small']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-small">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-small">
 						<h:outputText value="#{i18n['small']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton styleClass="btn-primary btn-mini">
+					<alloy:commandButton styleClass="btn-primary btn-mini">
 						<h:outputText value="#{i18n['mini']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-mini">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-mini">
 						<h:outputText value="#{i18n['mini']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton disabled="true" styleClass="btn-primary">
+					<alloy:commandButton disabled="true" styleClass="btn-primary">
 						<h:outputText value="#{i18n['disabled']}" />
-					</aui:commandButton>
-					<aui:commandButton disabled="true">
+					</alloy:commandButton>
+					<alloy:commandButton disabled="true">
 						<h:outputText value="#{i18n['disabled']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 
 				<p>
-					<aui:commandButton styleClass="btn-primary btn-block">
+					<alloy:commandButton styleClass="btn-primary btn-block">
 						<h:outputText value="#{i18n['block']}" />
-					</aui:commandButton>
-					<aui:commandButton styleClass="btn-block">
+					</alloy:commandButton>
+					<alloy:commandButton styleClass="btn-block">
 						<h:outputText value="#{i18n['block']}" />
-					</aui:commandButton>
+					</alloy:commandButton>
 				</p>
 			</showcase:example>
 		</h:form>
