--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,14 +6,14 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
-				<aui:inputTextarea id="textarea" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+				<alloy:inputTextarea id="textarea" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					required="#{showcaseModelBean.selectedComponent.required}" requiredMessage="#{i18n['required-message']}"
 					value="#{inputTextModelBean.text}" />
 				<h:message for="textarea" />
 				<hr />
-				<aui:commandButton action="#{inputTextBackingBean.submit}" value="#{i18n['submit']}">
+				<alloy:commandButton action="#{inputTextBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
-				</aui:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
