--- a/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/views/home.xhtml
@@ -18,7 +18,7 @@
 				sub-project provides a suite of JSF UI components that utilize <a href="http://alloyui.com/">Alloy UI</a>.
 			</p>
 			<p>
-				The Facelet component tags provided by Liferay Faces Alloy are prefixed with the <strong>aui:</strong> namespace.
+				The Facelet component tags provided by Liferay Faces Alloy are prefixed with the <strong>alloy:</strong> namespace.
 			</p>
 			<h3>Liferay Faces Bridge</h3>
 			<p>
