--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,14 +6,14 @@
 	<ui:define name="col1">
 		<showcase:example>
 			<!-- Implicit navigation back to /views/component.xhtml -->
-			<aui:button includeViewParams="true" outcome="component">
+			<alloy:button includeViewParams="true" outcome="component">
 				<!-- Override the value of the componentUseCase view parameter in order to navigate to a -->
 				<!-- different view. -->
 				<f:param name="componentUseCase" value="navigation" />
 				<f:param name="foo" value="1234" />
-				<aui:icon name="arrow-left" />
+				<alloy:icon name="arrow-left" />
 				<h:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
-			</aui:button>
+			</alloy:button>
 		</showcase:example>
 	</ui:define>
 
