--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/navigation/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/navigation/commandButton.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
 
@@ -6,10 +6,10 @@
 		<h:form>
 			<showcase:example>
 				<!-- Navigation based on outcome of navigation-case defined in navigation-rule.xml -->
-				<aui:commandButton action="toParam">
+				<alloy:commandButton action="toParam">
 					<h:outputText value="#{i18n['to-param-page']} " />
-					<aui:icon name="arrow-right" />
-				</aui:commandButton>
+					<alloy:icon name="arrow-right" />
+				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputParameter>
 				<h:outputText id="parameterValue" value="foo=#{facesContext.externalContext.requestParameterMap['foo']}" />
