--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/param/commandButton.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,11 +6,11 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<aui:commandButton
+				<alloy:commandButton
 					action="/views/component.xhtml?faces-redirect=true&amp;componentPrefix=aui&amp;componentName=commandbutton&amp;componentUseCase=navigation&amp;foo=1234">
-					<aui:icon name="arrow-left" />
+					<alloy:icon name="arrow-left" />
 					<h:outputText value=" #{i18n['back-to-navigation-with']} foo=1234" />
-				</aui:commandButton>
+				</alloy:commandButton>
 			</showcase:example>
 		</h:form>
 	</ui:define>
