--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/instant-ajax/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/instant-ajax/datePicker.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -10,7 +10,7 @@
 					<f:ajax render="@form" />
 					<f:convertDateTime pattern="MM/dd/yyyy" />
 				</h:inputText>
-				<aui:datePicker datePattern="MM/dd/yyyy" for="birthday" />
+				<alloy:datePicker datePattern="MM/dd/yyyy" for="birthday" />
 			</showcase:example>
 			<showcase:outputModel>
 				<h:outputText id="modelValue" value="#{datePickerModelBean.birthday}">
