--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/icon/general/icon.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/icon/general/icon.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -17,7 +17,7 @@
 					<f:selectItem itemValue="music" />
 					<f:ajax render="icon" />
 				</h:selectOneMenu>
-				<aui:icon id="icon" rendered="#{showcaseModelBean.selectedComponent.rendered}" name="#{iconModelBean.iconName}" />
+				<alloy:icon id="icon" rendered="#{showcaseModelBean.selectedComponent.rendered}" name="#{iconModelBean.iconName}" />
 			</showcase:example>
 		</h:form>
 	</ui:define>
