--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/general/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/general/inputDate.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -7,9 +7,9 @@
 		<!-- Example 1: Specifying focus (the default) for the showOn attribute pops up the calendar when the -->
 		<!-- textbox receives focus. -->
 		<h:form>
-			<showcase:example description="#{i18n['aui-inputdate-general-example-1']}" longDescription="true" number="1"
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-1']}" longDescription="true" number="1"
 				renderedCheckbox="true" requiredCheckbox="true">
-				<aui:inputDate id="birthday" datePattern="MM/dd/yyyy" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					required="#{showcaseModelBean.selectedComponent.required}" value="#{inputDateModelBean.birthday}" />
 				<h:message for="birthday" />
 				<hr />
@@ -28,9 +28,9 @@
 	<ui:define name="col2">
 		<!-- Example 2: Specifying button for the showOn attribute pops up the calendar when the button is clicked. -->
 		<h:form>
-			<showcase:example description="#{i18n['aui-inputdate-general-example-2']}" longDescription="true" number="2"
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-2']}" longDescription="true" number="2"
 				renderedCheckbox="true">
-				<aui:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="button"
+				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="button"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}" value="#{inputDateModelBean.birthday}" />
 				<h:message for="birthday" />
 				<hr />
@@ -50,9 +50,9 @@
 		<!-- Example#3: Specifying both for the showOn attribute pops up the calendar when the textbox receives -->
 		<!-- focus and when the button is clicked. -->
 		<h:form>
-			<showcase:example description="#{i18n['aui-inputdate-general-example-3']}" longDescription="true" number="3"
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-3']}" longDescription="true" number="3"
 				renderedCheckbox="true">
-				<aui:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="both"
+				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="both"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}" value="#{inputDateModelBean.birthday}" />
 				<h:message for="birthday" />
 				<hr />
