--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/max-length-events/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/max-length-events/outputRemainingChars.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	template="/templates/component-2col.xhtml">
@@ -6,11 +6,11 @@
 	<ui:define name="col1">
 		<!-- Example 1: The onMaxlengthReached event occurs every time maxlength is reached. -->
 		<h:form>
-			<showcase:example description="#{i18n['aui-outputremainingchars-max-length-reached-1']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-1']}" longDescription="true"
 				number="1">
 				<h:inputTextarea id="inputTextarea" maxlength="10" />
 				<br />
-				<aui:outputRemainingChars for="inputTextarea" onMaxlengthReached="alert('Max length reached');"
+				<alloy:outputRemainingChars for="inputTextarea" onMaxlengthReached="alert('Max length reached');"
 					value="There are {0} character(s) remaining." />
 			</showcase:example>
 		</h:form>
@@ -19,11 +19,11 @@
 	<ui:define name="col2">
 		<!-- Example 2: The onceMaxlengthReached event occurs the first time maxlength is reached. -->
 		<h:form>
-			<showcase:example description="#{i18n['aui-outputremainingchars-max-length-reached-2']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-2']}" longDescription="true"
 				number="2">
 				<h:inputTextarea id="inputTextarea" maxlength="10" />
 				<br />
-				<aui:outputRemainingChars for="inputTextarea" onceMaxlengthReached="alert('Max length reached once');"
+				<alloy:outputRemainingChars for="inputTextarea" onceMaxlengthReached="alert('Max length reached once');"
 					value="There are {0} character(s) remaining." />
 			</showcase:example>
 		</h:form>
