--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtext/conversion/outputText.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtext/conversion/outputText.xhtml
@@ -1,13 +1,13 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
 		<showcase:example>
-			<aui:outputText value="#{outputTextModelBean.today}">
+			<alloy:outputText value="#{outputTextModelBean.today}">
 				<f:convertDateTime pattern="EEEE, MMM dd, yyyy" />
-			</aui:outputText>
+			</alloy:outputText>
 		</showcase:example>
 	</ui:define>
 
