--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/starrating/data-model/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/starrating/data-model/starRating.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,10 +6,10 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<aui:starRating value="#{starRatingModelBean.favoriteId}" label="#{i18n['favorite']}:">
+				<alloy:starRating value="#{starRatingModelBean.favoriteId}" label="#{i18n['favorite']}:">
 					<f:selectItems value="#{starRatingModelBean.liferayBenefits}" var="benefit" itemValue="#{benefit.id}"
 						itemLabel="#{benefit.label}" />
-				</aui:starRating>
+				</alloy:starRating>
 				<hr />
 				<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
