--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/starrating/instant-ajax/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/starrating/instant-ajax/starRating.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,14 +6,14 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<aui:starRating value="#{starRatingModelBean.favoriteId}" label="#{i18n['favorite']}:">
+				<alloy:starRating value="#{starRatingModelBean.favoriteId}" label="#{i18n['favorite']}:">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
 					<f:selectItem itemLabel="Powerful Integration" itemValue="3" />
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 					<f:ajax render="@form" />
-				</aui:starRating>
+				</alloy:starRating>
 			</showcase:example>
 			<showcase:outputModel>
 				<h:outputText id="modelValue" value="#{starRatingModelBean.favoriteId}" />
