--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/data-model/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/data-model/tabView.xhtml
@@ -1,15 +1,15 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<showcase:example>
-		<aui:tabView value="#{tabViewModelBean.liferayBenefits}" var="liferayBenefit">
-			<aui:tab label="#{liferayBenefit.label}">
+		<alloy:tabView value="#{tabViewModelBean.liferayBenefits}" var="liferayBenefit">
+			<alloy:tab label="#{liferayBenefit.label}">
 				<h:graphicImage name="#{liferayBenefit.imageName}" library="images" />
 				<h4>#{liferayBenefit.title}</h4>
 				<span>#{liferayBenefit.description}</span>
-			</aui:tab>
-		</aui:tabView>
+			</alloy:tab>
+		</alloy:tabView>
 	</showcase:example>
 
 </ui:composition>
