--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/general/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/general/tabView.xhtml
@@ -1,35 +1,35 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<showcase:example>
-		<aui:tabView>
-			<aui:tab label="Compatible">
+		<alloy:tabView>
+			<alloy:tab label="Compatible">
 				<h:graphicImage library="images" name="compatible.png" />
 				<h4>Compatible With Your IT</h4>
 				<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
-			</aui:tab>
-			<aui:tab label="Enterprise Ready">
+			</alloy:tab>
+			<alloy:tab label="Enterprise Ready">
 				<h:graphicImage library="images" name="enterprise.png" />
 				<h4>Enterprise Ready</h4>
 				<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the cloud.</span>
-			</aui:tab>
-			<aui:tab label="Powerful Integration">
+			</alloy:tab>
+			<alloy:tab label="Powerful Integration">
 				<h:graphicImage library="images" name="integration.png" />
 				<h4>Powerful Integration</h4>
 				<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
-			</aui:tab>
-			<aui:tab label="Lightweight">
+			</alloy:tab>
+			<alloy:tab label="Lightweight">
 				<h:graphicImage library="images" name="lightweight.png" />
 				<h4>Lightweight and Agile</h4>
 				<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
-			</aui:tab>
-			<aui:tab label="Open Source">
+			</alloy:tab>
+			<alloy:tab label="Open Source">
 				<h:graphicImage library="images" name="open-source.png" />
 				<h4>Built With Open Source</h4>
 				<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
-			</aui:tab>
-		</aui:tabView>
+			</alloy:tab>
+		</alloy:tabView>
 	</showcase:example>
 
 </ui:composition>
