--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/thumbrating/general/thumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/thumbrating/general/thumbRating.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/templates/component-3col.xhtml">
@@ -6,10 +6,10 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<aui:thumbRating value="#{thumbRatingModelBean.like}" label="#{i18n['like']}:">
+				<alloy:thumbRating value="#{thumbRatingModelBean.like}" label="#{i18n['like']}:">
 					<f:selectItem itemLabel="#{i18n['like']}" itemValue="true" />
 					<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
-				</aui:thumbRating>
+				</alloy:thumbRating>
 				<hr />
 				<h:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
