--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:aui-cc="http://liferay.com/faces/aui-cc"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
